# practic-new-

./: README.md
.github/workflows/: python-app.yml
lr1/: README.md  error.txt  firstTask.py  log.txt  output.txt  secondTask.py  task1.py  task2.py  task3.py  thirdTask.py
lr2/: README.md  error.txt  greeting.py  names.txt
lr3/: .pre-commit-config.yaml  main.py  pyproject.toml  test_GHActions
lr3/database/: database.py
lr3/tests/: database_test.py
